# cts

./: CoqDSC.Crush.html  CoqDSC.ILambdaALDeriveProofs.html  CoqDSC.ILambdaALOperationalSemantics.html  CoqDSC.ILambdaALOperationalSemanticsProofs.html  CoqDSC.ILambdaALValues.html  CoqDSC.LambdaAL.html  CoqDSC.LambdaALDeriveProofs.html  CoqDSC.LambdaALFundamentalProperty.html  CoqDSC.LambdaALOperationalSemantics.html  CoqDSC.LibTactics.html  LICENSE  README.md  index.html
casestudy/: LICENSE  README.md  ilc-haskell.cabal  stack.yaml
casestudy/benchmark-src/: Benchmark.hs  GraphResults.hs
casestudy/executable-src/: Generate.hs  StaticCaching.hs
casestudy/executable-src/Examples/: Bag.hs  Map.hs  Sequence.hs
casestudy/generated-src/Data/Inc/Bag/: Generated.hs
casestudy/generated-src/Data/Inc/Map/: Generated.hs
casestudy/generated-src/Data/Inc/Sequence/: Generated.hs
casestudy/library-src/Data/: Group.hs
casestudy/library-src/Data/Inc/: Bag.hs  ChangeStruct.hs  Function.hs  Group.hs  Int.hs  Map.hs  Sequence.hs
casestudy/raw-benchmark-results/bag/: .~lock.average.csv#  average.csv  average_space.csv
casestudy/raw-benchmark-results/bag/average/size1/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size1001/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size101/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size1024/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size1048576/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size11/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size128/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size131072/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size16/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size16384/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size2/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size201/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size2048/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size21/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size256/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size262144/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size301/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size31/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size32/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size32768/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size4/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size401/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size4096/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size41/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size501/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size51/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size512/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size524288/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/bag/average/size601/: raw_results.csv  raw_results.html
casestudy/raw-benchmark-results/map/: .~lock.indexedJoin.csv#  indexedJoin.csv  indexedJoin_space.csv
casestudy/raw-benchmark-results/sequence/: .~lock.nestedLoopOuter.csv#  nestedLoopInner.csv  nestedLoopOuter.csv  nestedLoop_space.csv
casestudy/test-src/: BagGeneratedSpec.hs  BagSpec.hs  CorrectnessProperty.hs  MapGeneratedSpec.hs  MapSpec.hs  SequenceGeneratedSpec.hs  SequenceSpec.hs  Test.hs
(+258 files in other folders)
