name:                ilc-haskell
version:             0.1.0.0
synopsis:            Incremental lambda calculus in Haskell.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              REDACTED
maintainer:          REDACTED
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  exposed-modules:     Data.Inc.ChangeStruct,
                       Data.Inc.Int,
                       Data.Inc.Function,
                       Data.Inc.Group,
                       Data.Inc.Bag,
                       Data.Inc.Map,
                       Data.Inc.Sequence,
                       Data.Group
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10.0.0 && <4.11,
                       containers >=0.5.10.2 && <0.6,
                       dlist >=0.8.0.4 && <0.9,
                       hw-fingertree-strict >=0.1 && <0.2,
                       deepseq >=1.4.2.0 && <1.5
  hs-source-dirs:      library-src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable generate
  main-is:             Generate.hs
  other-modules:       StaticCaching,
                       Examples.Bag,
                       Examples.Map,
                       Examples.Sequence
  -- other-extensions:    
  build-depends:       ilc-haskell,
                       base >=4.10.0.0 && <4.11,
                       vinyl >=0.7.0 && <0.8,
                       transformers >=0.5.2.0 && <0.6,
                       containers >=0.5.7.1 && <0.6
  hs-source-dirs:      executable-src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       BagSpec,
                       BagGeneratedSpec,
                       MapSpec,
                       MapGeneratedSpec,
                       SequenceSpec,
                       SequenceGeneratedSpec,
                       Data.Inc.Bag.Generated,
                       Data.Inc.Map.Generated,
                       Data.Inc.Sequence.Generated,
                       CorrectnessProperty
  -- other-extensions:    
  build-depends:       ilc-haskell,
                       base >=4.10.0.0 && <4.11,
                       hspec >=2.4.4 && <2.5,
                       QuickCheck >=2.10.1 && <2.12,
                       deepseq >=1.4.2.0 && <1.5,
                       containers >=0.5.10.2 && <0.6,
                       dlist >=0.8.0.4 && <0.9,
                       ghc-heap-view >=0.5.10 && <0.6
  hs-source-dirs:      test-src, generated-src
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark benchmark
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  other-modules:       Data.Inc.Bag.Generated,
                       Data.Inc.Map.Generated
  -- other-extensions:    
  build-depends:       base >=4.10.0.0 && <4.11,
                       ilc-haskell,
                       criterion >=1.4.0.0 && <1.5,
                       deepseq >=1.4.2.0 && <1.5
  hs-source-dirs:      benchmark-src, generated-src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable graph-results
  main-is:             GraphResults.hs
  other-modules:       Data.Inc.Bag.Generated,
                       Data.Inc.Map.Generated,
                       Data.Inc.Sequence.Generated
  -- other-extensions:    
  build-depends:       ilc-haskell,
                       base >=4.10.0.0 && <4.11,
                       criterion >=1.4.0.0 && <1.5,
                       cassava >=0.5.1.0 && <0.6,
                       vector >=0.12.0.1 && <0.13,
                       bytestring >=0.10.8.1 && <0.11,
                       directory >=1.3.0.0 && <1.4,
                       deepseq >=1.4.2.0 && <1.5
  hs-source-dirs:      benchmark-src, generated-src
  default-language:    Haskell2010
  ghc-options:         -Wall

